@@ -88,7 +88,6 @@ package_data = {'matplotlib':['mpl-data/fonts/afm/*.afm',
                               'mpl-data/fonts/pdfcorefonts/*.afm',
                               'mpl-data/fonts/pdfcorefonts/*.txt',
                               'mpl-data/fonts/ttf/*.ttf',
-                              'mpl-data/fonts/otf/*.otf',
                               'mpl-data/images/*.xpm',
                               'mpl-data/images/*.svg',
                               'mpl-data/images/*.png',
